--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
+    "eslint": "^9.3.0",
     "eslint-config-react-native-wcandillon": "^3.10.2",
     "eslint-plugin-unused-imports": "^3.2.0"
   },
