--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/react": "~18.2.79",
     "@types/react-native": "^0.73.0",
     "dayjs": "^1.11.11",
-    "expo": "~51.0.8",
+    "expo": "51.0.10",
     "expo-battery": "~8.0.1",
     "expo-font": "~12.0.6",
     "expo-keep-awake": "~13.0.2",
