--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@gchumillas/schema-fixer": "^2.0.5",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.5",
     "@types/react": "~18.2.79",
     "@types/react-native": "^0.73.0",
     "dayjs": "^1.11.11",
@@ -38,8 +39,7 @@
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.4.0",
     "react-redux": "^9.1.2",
-    "react-router-native": "^6.23.1",
-    "redux": "^5.0.1"
+    "react-router-native": "^6.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
